# cypher-mind

./: README.md  requirements.txt
cli/: build.sh  go.mod  main.go
cli/cmd/: chat.go  prompt.go  root.go
orchestrator/: app.py
ui/: index.html  package.json  tsconfig.json
ui/public/: loader.json
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: db.rs  main.rs  ollama.rs
ui/src/components/: ChatView.tsx  Composer.tsx  Loader.tsx  ModelSwitcher.tsx  Sidebar.tsx
ui/src/lib/: ipc.ts  types.ts
