[package]
name = "llm-chat-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
tauri = { version = "^1", features = ["shell-open", "dialog-all"] }
tauri-plugin-store = "^0.3"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
rusqlite = { version = "^0.31", features = ["bundled"] }
uuid = { version = "^1", features = ["v4", "fast-rng"] }
dashmap = "^6"
chrono = { version = "^0.4", features = ["serde"] }
futures-util = "^0.3"
